<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:id="@+id/other_layout"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginStart="8dp"

                        android:textSize="12sp"
                        android:text="@string/main_category"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/button_shape"
                        android:layout_height="wrap_content">
                        <Spinner android:id="@+id/main_category_spinner"
                            android:layout_width="match_parent"
                            android:layout_margin="4dp"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginStart="8dp"

                        android:textSize="12sp"
                        android:text="@string/sub_category"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/button_shape"
                        android:layout_height="wrap_content">
                        <Spinner android:id="@+id/sub_category_spinner"
                            android:layout_width="match_parent"
                            android:layout_margin="4dp"

                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginBottom="16dp"
                    android:id="@+id/properties_recyclerView"
                    android:layout_height="wrap_content"/>



                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:textSize="@dimen/medium"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/submit_btn"
                    android:fontFamily="@font/sf_pro_medium"
                    android:text="@string/submit"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/include_layout"
            android:visibility="gone"

            android:layout_height="match_parent">
            <include
                android:layout_height="match_parent"

                android:id="@+id/searchable_layout"
                android:layout_alignParentBottom="true"
                layout="@layout/searchable_layout"
                android:layout_width="match_parent" />

        </LinearLayout>
    </RelativeLayout>
</layout>