<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/tajawal_bold"
                android:text="عرض الكل >"
                android:textColor="@color/pink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/tajawal_bold"
                android:text="تقييم المزاد >"

                android:textColor="@color/pink"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ratingBar" />

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:background="@drawable/elantra"


                android:layout_height="230dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderAnimationDuration="600"
                android:paddingBottom="50dp"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="@color/white"
                app:sliderIndicatorUnselectedColor="@color/grey"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="false" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                android:layout_marginStart="81dp"
                android:layout_marginEnd="81dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageSlider"
                app:layout_constraintTop_toBottomOf="@+id/imageSlider"
                tools:layout_editor_absoluteX="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:fontFamily="@font/tajawal_medium"
                            android:gravity="center"
                            android:text="بتاريخ"
                            android:textColor="@color/grey"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/tajawal_bold"
                            android:gravity="center"
                            android:text="26-11-2021"
                            android:textColor="@color/purple"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/tajawal_medium"

                            android:gravity="center"
                            android:text="13:59:00"
                            android:textColor="@color/purple"
                            android:textSize="8sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:fontFamily="@font/tajawal_medium"
                            android:gravity="center"
                            android:text="@string/aution_name"
                            android:textColor="@color/grey"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/tajawal_bold"
                            android:gravity="center"
                            android:text="31 :22:55"
                            android:textColor="@color/yellow"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/tajawal_medium"
                            android:gravity="center"
                            android:text="@string/units"
                            android:textColor="@color/yellow"
                            android:textSize="8sp" />

                    </LinearLayout>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="24dp"
                android:text="اسم المزاد"
                android:textSize="20sp"
                android:fontFamily="@font/tajawal_bold"
                android:textColor="#1d1d1d"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="تفاصيل المزاد >"
                android:fontFamily="@font/tajawal_bold"
                android:textColor="@color/pink"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/tajawal_medium"
                android:text="code 1234"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:numStars="5"
                android:rating="5"
                android:foregroundTint="@color/yellow"
                android:theme="@style/RatingBar"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="تقييم المزاد >"
                android:fontFamily="@font/tajawal_bold"
                android:textColor="@color/pink"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ratingBar" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_purchase"
                android:gravity="center"
                android:paddingTop="22dp"
                android:paddingEnd="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView11">

                <TextView
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/tajawal_bold"
                    android:text="سعر الشراء الفورى"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/one"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/tajawal_bold"
                    android:text="200 $"
                    android:textColor="@color/purple"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/button_purchase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/one"
                    android:layout_marginStart="18dp"

                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/button_withdrawal"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center"
                    android:text="انسحاب"

                    android:textColor="@color/pink"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/one"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/button_purchase"

                    android:background="@drawable/buton_pink"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center"
                    android:text="شراء الان"

                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                app:srcCompat="@drawable/audtion" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="المزايدون"
                android:fontFamily="@font/tajawal_medium"
                android:textSize="16sp"
                android:textColor="@color/grey"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bidders_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:itemCount="3"
                tools:listitem="@layout/row_bidder" />


            <TextView
                android:id="@+id/textView10"
                android:textSize="14sp"
                android:fontFamily="@font/tajawal_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/current_auction_value"
                app:layout_constraintEnd_toEndOf="@+id/ratingBar"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <TextView
                android:id="@+id/textView11"
                android:fontFamily="@font/tajawal_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:text="@string/current_aucvalue_tax"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="2000 $"
                android:textSize="16sp"
                android:textColor="@color/purple"
                android:fontFamily="@font/tajawal_medium"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="2000 $"
                android:textSize="16sp"
                android:textColor="@color/purple"                android:fontFamily="@font/tajawal_medium"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
